@@ -118,7 +118,6 @@
 		void SetupHardware(void);
 		void ResetHardware(void);
 
-		void EVENT_USB_Device_Disconnect(void);
 		void EVENT_USB_Device_ConfigurationChanged(void);
 		void EVENT_USB_Device_UnhandledControlRequest(void);
 
